--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build
 on:
   push:
     branches:
-      
+- master
+- Frontend
 main
 pull_request:
   types: [opened, synchronize, reopened]
