--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=NaomiCama_PRS-Naomi
+sonar.projectKey=PRS-Naomi
 sonar.organization=naomicama
 
 # This is the name and version displayed in the SonarCloud UI.
